force-app/main/default/objects/Activity/fields/Assign_Merchant_to_SSM__c.field-meta.xml
<CustomField>
    <fullName>Assign_Merchant_to_SSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the SSM that will be in charge of the merchant depending on the cluster.</inlineHelpText>
    <label>Assign Merchant to SSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>