force-app/main/default/objects/Activity/fields/Assigned_to_BackWatch__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_BackWatch__c</fullName>
    <formula>if( CONTAINS(Owner:Queue.QueueName , &apos;Back Watch&apos;), &apos;yes&apos;, &apos;no&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to BackWatch</label>
    <type>Text</type>
</CustomField>