force-app/main/default/objects/Activity/fields/Assigned_to_me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_me__c</fullName>
    <formula>IF(  Owner:User.Id = $User.Id  , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me</label>
    <type>Text</type>
</CustomField>