force-app/main/default/objects/Activity/fields/BizDev_Team__c.field-meta.xml
<CustomField>
    <fullName>BizDev_Team__c</fullName>
    <formula>TEXT(Owner:User.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BizDev Team</label>
    <type>Text</type>
</CustomField>