force-app/main/default/objects/Activity/fields/Critical_error_on_the_invoice__c.field-meta.xml
<CustomField>
    <fullName>Critical_error_on_the_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick the box if you think that the invoice you audited is so bad that we need to take immediate action with the merchant (invoice which doesn’t look at all like one, invoice sent as an editable file, etc.)</inlineHelpText>
    <label>Critical error on the invoice</label>
    <type>Checkbox</type>
</CustomField>