force-app/main/default/objects/Activity/fields/Date_of_the_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Date_of_the_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date of the Invoice</label>
    <type>Checkbox</type>
</CustomField>