force-app/main/default/objects/Activity/fields/Manually_Created_Task__c.field-meta.xml
<CustomField>
    <fullName>Manually_Created_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Created Task</label>
    <type>Checkbox</type>
</CustomField>