force-app/main/default/objects/Activity/fields/NMO_Process__c.field-meta.xml
<CustomField>
    <fullName>NMO_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N.M.O. Process</label>
    <referenceTo>NMO_Process__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>