force-app/main/default/objects/Activity/fields/Number_of_the_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Number_of_the_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Number of the Invoice</label>
    <type>Checkbox</type>
</CustomField>