force-app/main/default/objects/Activity/fields/Onboarding_Process__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Process</label>
    <referenceTo>Onboarding_Process__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>