force-app/main/default/objects/Activity/fields/Product_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Product_Cluster__c</fullName>
    <label>Product Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Cluster</valueSetName>
    </valueSet>
</CustomField>