force-app/main/default/objects/Activity/fields/Seat_Belt_Removal_KO__c.field-meta.xml
<CustomField>
    <fullName>Seat_Belt_Removal_KO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if your merchant didn&apos;t succeed the test</inlineHelpText>
    <label>Seat Belt Removal KO</label>
    <type>Checkbox</type>
</CustomField>