force-app/main/default/objects/Activity/fields/Seat_Belt_Removal_OK__c.field-meta.xml
<CustomField>
    <fullName>Seat_Belt_Removal_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if you want your TL to remove the SeatBelt</inlineHelpText>
    <label>Seat Belt Removal OK</label>
    <type>Checkbox</type>
</CustomField>