force-app/main/default/objects/Activity/fields/SeatBelt_removal_action__c.field-meta.xml
<CustomField>
    <fullName>SeatBelt_removal_action__c</fullName>
    <label>SeatBelt removal action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK - Merchant can be unlimited</fullName>
                <label>OK</label>
            </value>
            <value>
                <fullName>KO - Apply another limitation</fullName>
                <label>KO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>