force-app/main/default/objects/Activity/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check SAV</fullName>
            </value>
            <value>
                <fullName>Check BD</fullName>
            </value>
            <value>
                <fullName>Check Merchant Cluster</fullName>
            </value>
            <value>
                <fullName>Assign Merchant to SSM</fullName>
            </value>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>First Sale Invoice Compliance</fullName>
            </value>
            <value>
                <fullName>KYCs to check</fullName>
            </value>
            <value>
                <fullName>KYCs to approve</fullName>
            </value>
            <value>
                <fullName>First sale Check</fullName>
            </value>
            <value>
                <fullName>Sales check</fullName>
            </value>
            <value>
                <fullName>1st Quality check</fullName>
            </value>
            <value>
                <fullName>Sales + Quality check</fullName>
            </value>
            <value>
                <fullName>Final check before approval</fullName>
            </value>
            <value>
                <fullName>KYC Adyen to verify</fullName>
            </value>
            <value>
                <fullName>SeatBelt Removal</fullName>
            </value>
            <value>
                <fullName>Configure SEPA mandate</fullName>
            </value>
            <value>
                <fullName>Check buyback performance</fullName>
            </value>
            <value>
                <fullName>Buyback SeatBelt Removal</fullName>
            </value>
            <value>
                <fullName>Request new Resale Certificate</fullName>
            </value>
            <value>
                <fullName>Merchant visit</fullName>
                <isActive>false</isActive>
                <label>Merchant visit</label>
            </value>
            <value>
                <fullName>Seat Belt Alert - 200</fullName>
                <isActive>false</isActive>
                <label>Seat Belt Alert - 200</label>
            </value>
            <value>
                <fullName>Seat Belt Alert - 50</fullName>
                <isActive>false</isActive>
                <label>Seat Belt Alert - 50</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>