force-app/main/default/objects/Activity/fields/VAT_Regiment_Details__c.field-meta.xml
<CustomField>
    <fullName>VAT_Regiment_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Regiment Details</label>
    <type>Checkbox</type>
</CustomField>